<resources>
    <string name="app_name">Colocviu1_1</string>
    <string name="east">EAST</string>
    <string name="west">WEST</string>
    <string name="north">NORTH</string>
    <string name="south">SOUTH</string>
    <string name="navigate_to_secondary_activity">NAVIGATE TO SECONDARY ACTIVITY</string>
    <string name="register">REGISTER</string>
    <string name="cancel">CANCEL</string>
</resources>