<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.Colocviu1_1.Colocviu1_1MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_gravity="center">

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/north_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/north"
            android:saveEnabled="false"
            />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="0"
            android:layout_column="2"/>

        <Button
            android:id="@+id/east_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/east"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:id="@+id/west_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/west"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="2"
            android:layout_column="0"/>

        <Button
            android:id="@+id/south_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/south"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="2"
            android:layout_column="2"/>
    </GridLayout>

    <TextView
        android:id="@+id/buttonsTextView"
        android:layout_width="381dp"
        android:layout_height="88dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/navigate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/navigate_to_secondary_activity"/>
</LinearLayout>